# FitalyAgents

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.base.json  tsconfig.typedoc.json  turbo.json  typedoc.json  vitest.config.ts
.claude/: settings.local.json
.codex/skills/store-runtime-dev/: SKILL.md
.codex/skills/store-runtime-ops/: SKILL.md
.github/workflows/: ci.yml
apps/docs/: mdx-components.tsx  package.json  tailwind.config.js
apps/docs/app/: layout.tsx
apps/docs/lib/: source.ts
apps/store-deploy-center/: README.md  deploy-center.config.json  eslint.config.mjs  package.json  tsconfig.json  tsup.config.ts
apps/store-deploy-center/src/: main.ts
apps/store-runtime/: .env.example  Dockerfile  README.md  docker-compose.yml  package.json  store.config.example.json  store.config.json  store.config.redis.json  store.config.schema.json  tsconfig.json  tsup.config.ts  vitest.config.ts
apps/store-runtime/src/: main.test.ts  (+1 more)
docs/: APPROVAL-CHANNELS.md  ARCHITECTURE-V2.md  DISPATCHER-SPECULATIVE.md  FITALYSTORE-PRODUCT.md  GOVERNANCE.md  HUMAN-ROLES.md  MEMORY-INTEGRATION.md  SAFETY-MODEL.md  STORE-RUNTIME-DEVELOPER-GUIDE.md  STORE-RUNTIME-LIVEKIT-BRIDGE.md  STORE-RUNTIME-OPERATIONS.md
docs/api/: hierarchy.html  index.html  modules.html
docs/guides/: add-new-agent.md  asynctools-standalone.md  getting-started.md  rust-dispatcher.md  training-the-dispatcher.md
examples/agent-comparison/: package.json  tsconfig.json
examples/asynctools-only/: README.md  package.json  run.ts  tsconfig.json
examples/avatar-retail/: README.md  package.json  run.ts
examples/governance-quorum/: README.md  package.json  run.ts  tsconfig.json
examples/governance-webhook/: README.md  package.json
examples/langchain-agent/: README.md  package.json  run.ts  tsconfig.json
examples/memory-retail/: README.md  package.json  run.ts
examples/memory-retail-mempalace/: README.md  package.json  run.ts
examples/openai-agent/: README.md  package.json  run.ts
examples/vercel-ai-sdk-agent/: README.md  package.json  run.ts
examples/voice-retail/: Dockerfile  README.md  package.json
fitaly-voice/: Dockerfile  README.md  pyproject.toml
fitaly-voice/fitaly_voice/: __init__.py  __main__.py  bus_adapter.py  config.py  deepgram_stt.py  denoiser.py  diarizer.py  pipeline.py  speaker_cache.py  stt.py  stt_base.py  tracker.py  vad.py
fitaly-voice/fitaly_voice/bus/: __init__.py  adapters.py  schemas.py
fitaly-voice/tests/: conftest.py  test_bus.py  test_denoiser.py  test_pipeline.py  test_speaker_cache.py  test_stt.py  test_tracker.py  test_vad.py
plans/: AGENT-HANDOFF.md  CONTEXT-SPRINT-2.4.md  DISPATCHER-V2-SAFETY.md  PLAN-ARCHITECTURE.md  PLAN-DISPATCHER.md  PLAN-FITALYVOICE.md  PLAN-SPRINTS.md  PLAN.md  PLANV2.md  PRODUCT-STRATEGY.md  PROJECT-STRUCTURE.md  SPRINTS-V2.md  matematicas_practica.html
(+299 files in other folders)
