[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fitaly-voice"
version = "0.1.0"
description = "Local audio diarization and speaker identification pipeline for FitalyAgents"
readme = "README.md"
license = { text = "AGPL-3.0-only WITH Commons-Clause" }
requires-python = ">=3.10"
dependencies = [
    # VAD — TEN Framework (ONNX-based, ~306KB model, no PyTorch needed)
    "ten-vad @ git+https://github.com/TEN-framework/ten-vad.git",
    # Denoising
    "noisereduce>=3.0",
    "scipy>=1.11",
    # Bus
    "redis[hiredis]>=5.0",
    # Core
    "numpy>=1.24",
    "sounddevice>=0.4",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
# Full NeMo pipeline for diarization + speaker ID (model training / ONNX export)
# NeMo pins numpy<2, so install this on Python <=3.12 or in a separate env
nemo = [
    "nemo_toolkit[asr]>=2.0",
]
# RNNoise denoiser backend (not available on Python 3.14+)
rnnoise = [
    "rnnoise-python>=0.1",
]
# Lightweight runtime after ONNX export (no full NeMo needed)
onnx = [
    "onnxruntime-gpu>=1.17",
]
# Production streaming STT via Deepgram
deepgram = [
    "deepgram-sdk>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[project.scripts]
fitaly-voice = "fitaly_voice.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["fitaly_voice"]
